<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/back"
        android:title="@string/back"
        android:icon="@drawable/undo"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/forward"
        android:title="@string/forward"
        android:icon="@drawable/redo"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/refresh"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/device_preset"
        android:title="@string/device"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/device_mobile"
                    android:title="@string/mobile"
                    android:checked="true"/>
                <item
                    android:id="@+id/device_tablet"
                    android:title="@string/tablet"/>
                <item
                    android:id="@+id/device_desktop"
                    android:title="@string/desktop"/>
            </group>
        </menu>
    </item>
    
</menu>