<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/code_editor">
        <org.xedox.webaide.preference.MaterialListPreference
            android:key="editor_typeface"
            android:title="@string/editor_typeface"
            android:entries="@array/typeface_entries"
            android:entryValues="@array/typeface_values"
            android:summary="@string/editor_typeface_summary"
            android:defaultValue="jetbrainsmono-bold" />

        <org.xedox.webaide.preference.MaterialMultiSelectListPreference
            android:key="non_printable_flags"
            android:title="@string/non_printable_title"
            android:summary="@string/non_printable_summary"
            android:entries="@array/non_printable_entries"
            android:entryValues="@array/non_printable_values"
            android:defaultValue="@array/non_printable_default" />

        <org.xedox.webaide.preference.MaterialEditTextPreference
            android:key="editor_tab_size"
            android:title="@string/tab_size"
            android:summary="@string/tab_size"
            android:inputType="number"
            android:defaultValue="4" />

        <SwitchPreferenceCompat
            android:key="line_numbers"
            android:title="@string/line_numbers"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="block_line"
            android:title="@string/block_line"
            android:defaultValue="false" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
